--- a/src/index.html
+++ b/src/index.html
@@ -1,73 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Belajar TailwindCSS</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="dark:text-white dark:bg-slate-900">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body class="dark:text-white dark:bg-slate-900">
     <section class="max-w-2xl m-auto mt-52 font-mono">
-        <div class="mb-4 text-4xl font-bold">Belajar Typography  <span class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text text-transparent">TailwindCSS</span></div>
-        <div class="mb-3 text-xl font-medium text-gray-400">By  <a href="#" class="text-gray-700 underline dark:text-white">Hilman</a>, 20 November 2022</div>
-        <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ratione eius illum eos labore facere, expedita temporibus libero soluta perspiciatis totam! Dolorum perspiciatis itaque animi eaque quas nobis optio quos, saepe voluptatibus voluptate excepturi maiores. Labore nam, cum tenetur distinctio, veniam provident laudantium corrupti hic harum, corporis tempora consequatur recusandae.</p>
-        <blockquote class="mb-4 italic text-xl text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quasi tenetur dolor pariatur eum molestias. Aut officia vero in est.</blockquote>
-        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium hic quas, illo exercitationem nam, laborum beatae vel rem fugit ducimus cupiditate delectus minima fuga tempora molestias facilis! Reiciendis, repudiandae sequi!</p>
+      <div class="mb-4 text-4xl font-bold">Belajar Typography <span class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text text-transparent">TailwindCSS</span></div>
+      <div class="mb-3 text-xl font-medium text-gray-400">By <a href="#" class="text-gray-700 underline dark:text-white">Hilman</a>, 20 November 2022</div>
+      <p class="mb-4">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ratione eius illum eos labore facere, expedita temporibus libero soluta perspiciatis totam! Dolorum perspiciatis itaque animi eaque quas nobis optio quos, saepe
+        voluptatibus voluptate excepturi maiores. Labore nam, cum tenetur distinctio, veniam provident laudantium corrupti hic harum, corporis tempora consequatur recusandae.
+      </p>
+      <blockquote class="mb-4 italic text-xl text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quasi tenetur dolor pariatur eum molestias. Aut officia vero in est.</blockquote>
+      <p class="mb-4">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium hic quas, illo exercitationem nam, laborum beatae vel rem fugit ducimus cupiditate delectus minima fuga tempora molestias facilis! Reiciendis, repudiandae sequi!
+      </p>
     </section>
 
-    <div class="max-w-xl h-96 bg-lime-500 mx-auto mt-10 overflow-y-scroll bg-scroll" style="background-image: url('https://source.unsplash.com/1000x600?computer');">
-        <p class="p-5 text-2xl">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam dignissimos et magni temporibus, porro dolorum velit amet tempora laboriosam voluptatibus mollitia vero fuga commodi numquam vel cumque beatae nulla voluptatum reiciendis ea asperiores quo eligendi. Nulla facere, ea sit optio vel, quis magnam temporibus nemo ex dolore eos! Inventore quis eligendi atque ad cum, earum amet porro a. Rerum ducimus at libero, ipsam praesentium exercitationem quos fugiat aperiam, quod animi autem neque similique tenetur ea, aut sit reprehenderit consequatur ullam placeat velit minima provident. Itaque quis eaque iusto incidunt libero. Inventore placeat natus deleniti ut voluptatem cum possimus dolorem, autem perspiciatis tenetur officia nisi rem vero praesentium asperiores neque quo earum reprehenderit cumque ad quibusdam quia, commodi repellat. Delectus minima aut unde sed nisi vitae obcaecati ad animi adipisci a. Sit magnam eligendi repellat modi doloremque, aliquid officiis culpa inventore, excepturi minus debitis sapiente omnis dolorum aperiam cupiditate quas blanditiis quos voluptatum nemo nihil quod, numquam quidem illum possimus. Possimus excepturi voluptates sint cupiditate tenetur ducimus iure sequi. Nam impedit cumque atque quos animi rem iusto modi, nobis aspernatur a ipsam dicta aliquid dolores recusandae iste consequuntur asperiores eaque illo! Nesciunt nostrum, aliquid optio itaque cupiditate autem quod fuga!
-        </p>
+    <div class="max-w-xl h-96 bg-lime-500 mx-auto mt-10 overflow-y-scroll bg-scroll" style="background-image: url('https://source.unsplash.com/1000x600?computer')">
+      <p class="p-5 text-2xl">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quisquam dignissimos et magni temporibus, porro dolorum velit amet tempora laboriosam voluptatibus mollitia vero fuga commodi numquam vel cumque beatae nulla
+        voluptatum reiciendis ea asperiores quo eligendi. Nulla facere, ea sit optio vel, quis magnam temporibus nemo ex dolore eos! Inventore quis eligendi atque ad cum, earum amet porro a. Rerum ducimus at libero, ipsam praesentium
+        exercitationem quos fugiat aperiam, quod animi autem neque similique tenetur ea, aut sit reprehenderit consequatur ullam placeat velit minima provident. Itaque quis eaque iusto incidunt libero. Inventore placeat natus deleniti ut
+        voluptatem cum possimus dolorem, autem perspiciatis tenetur officia nisi rem vero praesentium asperiores neque quo earum reprehenderit cumque ad quibusdam quia, commodi repellat. Delectus minima aut unde sed nisi vitae obcaecati ad
+        animi adipisci a. Sit magnam eligendi repellat modi doloremque, aliquid officiis culpa inventore, excepturi minus debitis sapiente omnis dolorum aperiam cupiditate quas blanditiis quos voluptatum nemo nihil quod, numquam quidem
+        illum possimus. Possimus excepturi voluptates sint cupiditate tenetur ducimus iure sequi. Nam impedit cumque atque quos animi rem iusto modi, nobis aspernatur a ipsam dicta aliquid dolores recusandae iste consequuntur asperiores
+        eaque illo! Nesciunt nostrum, aliquid optio itaque cupiditate autem quod fuga!
+      </p>
     </div>
 
-    <div class="flex max-w-xl h-96 mt-32 bg-slate-400 mx-auto bg-contain bg-no-repeat bg-center rounded-2xl shadow-xl shadow-slate-500" style="background-image: url('./img/laptop.jpg');">
-        <div class="w-[200px] h-[200px] bg-white/30 m-auto backdrop-blur-lg rounded-full"></div>
+    <div class="flex max-w-xl h-96 mt-32 bg-slate-400 mx-auto bg-contain bg-no-repeat bg-center rounded-2xl shadow-xl shadow-slate-500" style="background-image: url('./img/laptop.jpg')">
+      <div class="w-[200px] h-[200px] bg-white/30 m-auto backdrop-blur-lg rounded-full"></div>
     </div>
 
-    <hr class="my-20"/>
+    <hr class="my-20" />
 
     <div class="flex justify-center">
-        <span class="text-sm text-slate-500 mr-2">Light</span>
-        <input type="checkbox" id="toggle" class="hidden">
-        <label for="toggle">
-            <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1 cursor-pointer">
-                <div class="w-4 h-4 bg-white rounded-full toggle-circle"></div>
-            </div>
-        </label>
-        <span class="text-sm text-slate-500 ml-2">Dark</span>
+      <span class="text-sm text-slate-500 mr-2">Light</span>
+      <input type="checkbox" id="toggle" class="hidden" />
+      <label for="toggle">
+        <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1 cursor-pointer">
+          <div class="w-4 h-4 bg-white rounded-full toggle-circle"></div>
+        </div>
+      </label>
+      <span class="text-sm text-slate-500 ml-2">Dark</span>
     </div>
 
-    <button class="my-10 bg-sky-500 dark:bg-lime-500 px-5 py-2 rounded-full text-white dark:text-black font-semibold font-mono block mx-auto hover:bg-sky-600 dark:hover:bg-lime-600 active:bg-sky-700 dark:active:bg-lime-700 focus:ring focus:ring-sky-300 dark:focus:ring-lime-300">Simpan</button>
+    <button
+      class="my-10 bg-sky-500 dark:bg-lime-500 px-5 py-2 rounded-full text-white dark:text-black font-semibold font-mono block mx-auto hover:bg-sky-600 dark:hover:bg-lime-600 active:bg-sky-700 dark:active:bg-lime-700 focus:ring focus:ring-sky-300 dark:focus:ring-lime-300"
+    >
+      Simpan
+    </button>
 
     <div class="max-w-lg my-10 border border-slate-200 dark:border-white rounded-xl mx-auto p-5 shadow-md dark:shadow-white font-mono hover:bg-sky-500 dark:hover:bg-lime-500 group">
-        <h5 class="font-bold text-slate-700 dark:text-white text-lg mb-3 group-hover:text-white dark:group-hover:text-black">My Card</h5>
-        <p class="text-slate-600 dark:text-slate-50 group-hover:text-white dark:group-hover:text-black selection:bg-lime-300 selection:text-slate-900 first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti consequatur exercitationem reprehenderit provident amet modi ut, quos dignissimos voluptatibus numquam suscipit facilis deserunt sit aspernatur. Asperiores distinctio pariatur soluta sint?</p>
+      <h5 class="font-bold text-slate-700 dark:text-white text-lg mb-3 group-hover:text-white dark:group-hover:text-black">My Card</h5>
+      <p
+        class="text-slate-600 dark:text-slate-50 group-hover:text-white dark:group-hover:text-black selection:bg-lime-300 selection:text-slate-900 first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"
+      >
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti consequatur exercitationem reprehenderit provident amet modi ut, quos dignissimos voluptatibus numquam suscipit facilis deserunt sit aspernatur. Asperiores
+        distinctio pariatur soluta sint?
+      </p>
     </div>
 
     <div class="max-w-lg border border-slate-200 rounded-xl mx-auto shadow-md font-mono p-5">
-        <form action="">
-            <label for="email">
-                <span class="block font-semibold mb-1 text-slate-700 dark:text-white after:content-['*'] after:text-pink-500 after:ml-0.5">Email</span>
-                <input type="email" placeholder="masukkan email.." id="email" class="px-3 py-2 border shadow rounded w-full block text-sm placeholder:text-slate-400 dark:text-black focus:outline-none focus:ring-1 focus:ring-sky-500 focus:border-sky-500 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer">
-                <p class="text-sm m-1 text-pink-700 invisible peer-invalid:visible">Email Tidak Valid</p>
-            </label>
-        </form>
+      <form action="">
+        <label for="email">
+          <span class="block font-semibold mb-1 text-slate-700 dark:text-white after:content-['*'] after:text-pink-500 after:ml-0.5">Email</span>
+          <input
+            type="email"
+            placeholder="masukkan email.."
+            id="email"
+            class="px-3 py-2 border shadow rounded w-full block text-sm placeholder:text-slate-400 dark:text-black focus:outline-none focus:ring-1 focus:ring-sky-500 focus:border-sky-500 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer"
+          />
+          <p class="text-sm m-1 text-pink-700 invisible peer-invalid:visible">Email Tidak Valid</p>
+        </label>
+      </form>
+    </div>
+
+    <div class="mt-64 p-2 font-mono grid grid-cols-2 gap-2 md:grid-cols-4 md:p-4">
+      <h2 class="h-15 text-xl font-semibold text-slate-700 md:col-start-4 md:row-start-2 md:flex"><span class="self-center">Welcome to Kaza</span></h2>
+      <div class="h-15 text-lg font-bold text-slate-600 md:col-start-2 md:row-start-2 md:flex"><span class="self-end">@Kaza</span></div>
+
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/1.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/2.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/3.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/4.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/5.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/6.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/7.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/8.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/9.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
+      <div class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition-all duration-500">
+        <div class="w-full h-full bg-[url('../img/10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition-all duration-500"></div>
+      </div>
     </div>
 
     <div class="mb-96"></div>
     <script>
-        const toggle = document.querySelector("#toggle");
-        const html = document.querySelector("html");
-        toggle.addEventListener("click", () => {
-            if(html.classList == "dark"){
-                html.classList.remove("dark");
-            }
-            else {
-                html.classList.add("dark");
-            }
-        })
+      const toggle = document.querySelector("#toggle");
+      const html = document.querySelector("html");
+      toggle.addEventListener("click", () => {
+        if (html.classList == "dark") {
+          html.classList.remove("dark");
+        } else {
+          html.classList.add("dark");
+        }
+      });
     </script>
-</body>
+  </body>
 </html>
